--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3579,7 +3579,7 @@ input, select, textarea {
 		justify-content: center;
 		cursor: default;
 		background-image :url("../../images/exoplanets.jpg"); 
-		background-size: auto;
+		background-size: cover;
 
 		height: 100vh;
 		min-height: 35em;
